Add: Recommandations pour l'accessibilité d'un composant d'autocomplétion

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -188,6 +188,10 @@
         <a href="https://www.deque.com/blog/accessible-aria-buttons/">Building Accessible Buttons with <abbr>ARIA</abbr>: <abbr>A11y</abbr> Support Series</a>,
         <i class="blog">Deque Blog</i>, 28.09.2016.
       </li>
+      <li><span lang="fr">
+        <a href="https://a11y-guidelines.orange.com/fr/articles/recommandations-autocompletion/" hreflang="fr">Recommandations pour l'accessibilité d'un composant d'autocomplétion</a>,
+        <i class="website">Recommandations accessibilité numérique Orange</i> (no date).
+      </li>
     </ul>
 
     <h3><abbr>CAST</abbr> Figuration</h3>
@@ -461,6 +465,24 @@
     -->
     <!-- Responsive web design in general (no discussion of accessibility):
       * Ben Frain: Responsive Web Design with HTML5 and CSS3 - Second Edition. Packt Publishing, August 2015: https://www.packtpub.com/web-development/responsive-web-design-html5-and-css3-second-edition 
+    -->
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>,
+          <i class=""></i>,
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    <section>
     -->
   </main>
 
