Add: Fleishman: How to enable Reader View automatically for websites in mobile and desktop Safari

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -185,6 +185,10 @@
           <a href="https://www.lireo.com/how-to-disable-autoplay-videos-in-linkedin-for-desktop-android-and-ios/">How to Disable Autoplay Videos in LinkedIn for Desktop, Android, and iOS</a>,
           <i class="website">Lireo Designs</i>, 27.12.2017.
         </li>
+        <li>Fleishman, Glenn:
+          <a href="https://www.macworld.com/article/3511425/how-to-enable-reader-view-automatically.html">How to enable Reader View automatically for websites in mobile and desktop Safari</a>,
+          <i class="website">Macworld</i>, 06.01.2020.
+        </li>
         <li><a href="http://ask.metafilter.com/277495/Computing-hacks-for-migraine-sufferers">Computing hacks for migraine sufferers</a>,
           <i class="website">AskMetaFilter</i>, 19.03.2015.
         </li>
