Add: 10 Things to Know About Twitter’s Alternative Text for Images; Reducing Motion in Animations

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -511,6 +511,10 @@
           <i class="website">Twitter Help Center</i>.
           This explains how to add text descriptions to images you post on Twitter.
         </li>
+        <li>Edwards-Onoro, Deborah:
+          <a href="https://www.lireo.com/15-things-to-know-twitter-alternative-text-images/">10 Things to Know About Twitter’s Alternative Text for Images</a>,
+          <i class="website">Lireo Designs</i>, 01.06.2020.
+        </li>
         <li>Camel casing hashtags improves accessibility: screen readers announce each word separately.
           (<a href="https://twitter.com/jma245/status/1308086738196353024">Jennifer Aldrich citing Deborah Edwards-Oñoro on Twitter, 21.09.2020</a>)
         </li>
@@ -1828,6 +1832,10 @@
         <li>Head, Val:
           <a href="https://css-tricks.com/accessible-web-animation-the-wcag-on-animation-explained/">Accessible Web Animation: The <abbr>WCAG</abbr> on Animation Explained</a>,
           <i class="website"><abbr>CSS</abbr>-Tricks</i>, 22.09.2020.
+        </li>
+        <li>Finni, Ryan:
+          <a href="https://letsbuildui.dev/articles/reducing-motion-in-animations">Reducing Motion in Animations</a>,
+          <i class="website">Let's Build <abbr>UI</abbr></i>, 20.12.2020.
         </li>
       </ul>
     </section>
