Add: DBSV-Stellungnahme zum Referentenentwurf eines Gesetzes zur Stärkung der Teilhabe von Menschen mit Behinderungen

--- a/social-legal.html
+++ b/social-legal.html
@@ -168,6 +168,10 @@
         <i class="website">Beauftragter der Bundesregierung für die Belange von Menschen mit Behinderungen, Jürgen Dusel</i></span>, 07.01.2021.
         <!--Referrer: https://twitter.com/BBMB_bund/status/1348990273662148610 -->
       </li>
+      <li><span lang="de">
+        <a href="https://www.dbsv.org/stellungnahme/TSG-RefE.html" hreflang="de"><abbr>DBSV</abbr>-Stellungnahme zum Referentenentwurf eines Gesetzes zur Stärkung der Teilhabe von Menschen mit Behinderungen (Teilhabestärkungsgesetz)</a>,
+        <i class="website">Deutscher Blinden- und Sehbehindertenverband</i></span>, 14.01.2021.
+      </li>
     </ul>
 
     <h4>Other Policies in Europe</h4>
