Add: examples of audio description (Frozen, The Hunger Games)

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -672,6 +672,18 @@
           https://www.youtube.com/watch?v=Y76hSxoxClg
         -->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=O7j4_aP8dWA">Frozen - Trailer with Audio Description</a>
+        (<i class="ytchannel"><abbr>IMSTVUK</abbr></i> on YouTube, 2 minutes, 12.11.2013).
+      </li>
+      <!--<li>
+        <a href="https://www.youtube.com/watch?v=7-XOHN2BWG4">Audio Description - Full Clip</a>
+        (<i class="ytchannel">Jane Doe</i> on YouTube, 2 minutes, 25.10.2016).
+      </li>-->
+      <li>
+        <a href="https://www.youtube.com/watch?v=B8BD9txkGL4">The Hunger Games with audio description: Katniss hunting</a>
+        (<i class="ytchannel"> Centre for Inclusive Design</i> on YouTube, 1 minute, 28.10.2012).
+      </li>
       <!--Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8
       -->
     </ul>
