Add: WebAIM: Keyboard Shortcuts for NVDA

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -152,6 +152,8 @@
         free and open-source screen reader for built into the GNOME desktop environment.
         See also
         <a href="https://help.gnome.org/users/orca/stable/index.html.en">Orca Screen Reader</a>
+        and
+        <a href="https://help.gnome.org/users/orca/stable/commands_controlling_orca.html.en">Controlling and Learning to Use Orca</a>
         on the GNOME Help site and
         <a href="https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html">Orca Screen Reader and Magnifier</a>
         in Oracle's Solaris 11 Accessibility Guide for the GNOME Desktop.
@@ -161,6 +163,10 @@
         free and open-source screen reader for Microsoft Windows.
         See also the
         <a href="https://www.nvaccess.org/files/nvda/documentation/userGuide.html"><abbr>NVDA</abbr> User Guide</a>.
+      </li>
+      <li>
+        <a href="https://webaim.org/resources/shortcuts/nvda">Keyboard Shortcuts for <abbr>NVDA</abbr></a>,
+        <i class="website">Web<abbr>AIM</abbr</i>, 25.09.2020.
       </li>
       <li><span lang="de"><a href="https://www.ionos.de/digitalguide/websites/web-entwicklung/screenreader/" hreflang="de">Alles über Screenreader: Blind am Computer arbeiten</a>,
         <i class="website">IONOS</i></span>, 13.04.2018.
