Add: How To Be Human with audio description

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -702,6 +702,18 @@
         <a href="https://www.youtube.com/watch?v=rgRv4bSdLdU">The Interviewer - Captions &amp; Audio Description</a>
         (<i class="ytchannel">Bus Stop Films</i> on YouTube, 13 minutes, 18.01.2015).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=awCBK_2ZQhU">Sci-Fi Short Film “How To Be Human” Audio Description Version</a>
+        (<i class="ytchannel">DUST</i> on YouTube, 19 minutes, 22.11.2019).
+        <br />This is an example of &ldquo;immersive audio description&rdquo; in which the description is spoken by one of the film's characters.
+        The description below the video says
+        <q>This inclusive version of "How To Be Human" includes an audio description for individuals with visual impairment.
+        If you were forced to flee your own war-ridden country, would you sacrifice what makes you human to survive? "How to be Human" by Bruno Centofanti.</q>
+        <br />The original version
+        <a href="https://www.youtube.com/watch?v=5PXtbqdy3vg">Sci-Fi Short Film “How To Be Human”</a>
+        is 14 minutes long, <abbr>i.e.</abbr> six minutes shorter. This is because the version with audio description
+        begins with a six-minute narration that provides the story's background and presents the two main characters.
+      </li>
       <!--Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8
       -->
     </ul>
