--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
+<!--Testing polyglot markup as described at https://www.w3.org/TR/html-polyglot/ -->
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
   <title>Accessibility Resources</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
@@ -140,11 +142,6 @@
       <li>
         <a href="https://accessibility-club.org/event/accessibility-club-summit-2019">Accessibility Club Summit 2019 (November 16th-17th, 2019)</a>.
       </li>
-      <!--
-      <li>
-        <a href=""></a>
-      </li>
-      -->
     </ul>
     <p>Other <a href="miscellaneous-links.html">unsorted links</a>.</p>
   </div>
@@ -170,20 +167,28 @@
       * “Inclusive Design Patterns” by Heydon Pickering (eBook): https://shop.smashingmagazine.com/products/inclusive-design-patterns-by-heydon-pickering-ebook 
       * Apps For All: Coding Accessible Web Applications: https://shop.smashingmagazine.com/products/apps-for-all 
     -->
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    </section>
+    -->
   </main>
 
   <footer>
     <p id="licence">
-    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
-    <br />
-    <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text">
-    <a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility
-    Resources</a></span> by <a xmlns:cc="http://creativecommons.org/ns#"
-    href="https://github.com/cstrobbe"
-    rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a <a
-    xml:lang="en-US" lang="en-US" rel="license"
-    href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
-    Attribution-ShareAlike 4.0 International License</a>. </p>
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
+      <br />
+      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text"><a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility Resources</a></span>
+      by
+      <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cstrobbe" rel="cc:attributionURL">Christophe Strobbe</a>
+      is licensed under a
+      <a xml:lang="en-US" lang="en-US" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    </p>
   </footer>
 </body>
 </html>
