--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<!--Testing polyglot markup as described at https://www.w3.org/TR/html-polyglot/ -->
+<!--Testing polyglot markup as described at https://www.w3.org/TR/html-polyglot/
+  W3C Validator does not support the XML processing instruction <?xml version="1.0" encoding="UTF-8"?> for HTML5.
+-->
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
