Update .gitignore; fix syntax errors in index.html and index.xhtml

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 -->
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
-  <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Accessibility Resources</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
   <!--See quick intro to GitHub pages at https://pages.github.com/ -->
   <!--See also https://help.github.com/articles/user-organization-and-project-pages/ -->
-  <link rel="license" href="LICENCE.html" /><!-- license rel, see https://www.w3.org/TR/html5/links.html#sec-link-types -->
+  <link rel="license" href="LICENCE.html" /><!--license rel, see https://www.w3.org/TR/html5/links.html#sec-link-types -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
@@ -24,7 +24,7 @@
   <main>
   <blockquote id="introquote">
     <p>When <abbr>UX</abbr> doesn't consider ALL users, shouldn't it be known as "SOME Users' Experience" or... <abbr>SUX</abbr>?</p>
-    <p><cite><a href="https://twitter.com/thebillygregory/status/552466012713783297">Billy Gregory on Twitter, 06.01.2015</a></cite>
+    <p><cite><a href="https://twitter.com/thebillygregory/status/552466012713783297">Billy Gregory on Twitter, 06.01.2015</a></cite></p>
   </blockquote>
 
   <section>
@@ -132,7 +132,7 @@
       </li>
       <li>
         <a href="http://www.cardiac-eu.org/">Cardiac</a>: this project aimed
-        <q> to create a platform that can bring together the various stakeholders in the area of accessible and assistive ICT with a view to identifying research & development gaps, emerging trends, and generate a research agenda roadmap.</q>
+        <q> to create a platform that can bring together the various stakeholders in the area of accessible and assistive ICT with a view to identifying research &amp; development gaps, emerging trends, and generate a research agenda roadmap.</q>
       </li>
       <li>
         <a href="http://inclusive-learning.eu/">Inclusive Learning Project (Supporting Trainers for an Inclusive Vocational Education and Training)</a>.
