--- a/index.xhtml
+++ b/index.xhtml
@@ -22,7 +22,7 @@
   <div class="main">
   <blockquote id="introquote">
     <p>When <abbr>UX</abbr> doesn't consider ALL users, shouldn't it be known as "SOME Users' Experience" or... <abbr>SUX</abbr>?</p>
-    <p><cite><a href="https://twitter.com/thebillygregory/status/552466012713783297">Billy Gregory on Twitter, 06.01.2015</a></cite>
+    <p><cite><a href="https://twitter.com/thebillygregory/status/552466012713783297">Billy Gregory on Twitter, 06.01.2015</a></cite></p>
   </blockquote>
 
   <div class="section">
@@ -130,7 +130,7 @@
       </li>
       <li>
         <a href="http://www.cardiac-eu.org/">Cardiac</a>: this project aimed
-        <q> to create a platform that can bring together the various stakeholders in the area of accessible and assistive ICT with a view to identifying research & development gaps, emerging trends, and generate a research agenda roadmap.</q>
+        <q> to create a platform that can bring together the various stakeholders in the area of accessible and assistive ICT with a view to identifying research &amp; development gaps, emerging trends, and generate a research agenda roadmap.</q>
       </li>
       <li>
         <a href="http://inclusive-learning.eu/">Inclusive Learning Project (Supporting Trainers for an Inclusive Vocational Education and Training)</a>.
