--- a/index.xhtml
+++ b/index.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">-->
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:aria="http://www.w3.org/ns/wai-aria/" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
   <title>Accessibility Resources</title>
@@ -19,7 +20,7 @@
     <h1><span class="h1txt">Accessibility Resources</span></h1>
   </div><!--end header-->
 
-  <div class="main">
+  <div class="main" aria:role="main">
   <blockquote id="introquote">
     <p>When <abbr>UX</abbr> doesn't consider ALL users, shouldn't it be known as "SOME Users' Experience" or... <abbr>SUX</abbr>?</p>
     <p><cite><a href="https://twitter.com/thebillygregory/status/552466012713783297">Billy Gregory on Twitter, 06.01.2015</a></cite></p>
