--- a/index.xhtml
+++ b/index.xhtml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--Linking CSS stylesheet for XML goes like in the following line but for XHTML it is unnecessary to use this mechanism, since the link element works as expected:
+  <?xml-stylesheet type="text/css" href="css/stuttgartbib.css"?>
+-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:aria="http://www.w3.org/ns/wai-aria/" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
@@ -104,14 +106,6 @@
         <a href="https://impact-access.eu/">Impact Project</a>:
         <q>IMPACT aims to create an expert training program on digital accessibility. This training will develop the skills of the experts so that they are able to provide high quality accessible content in different digital contexts.</q>
       </li>
-      <li><del datetime="2020-02-26">The website of the European project
-        European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
-        also has a <a href="http://www.eiii.eu/resources/">resources page</a>.
-        However, more importantly, the 
-        <strong>search form</strong> helps you find accessibility-related
-        resources on the Web.</del>
-        <!--Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
-      </li>
       <li><a href="http://able-to-include.com/">Able to Include</a>:
         <q>Using assistive technology to help people with intellectual disabilities use social media.</q>
         See also the <a href="https://github.com/able-to-include" title="Able to Include on GitHub">project's GitHub repositories</a>.
@@ -126,12 +120,8 @@
         (ERASMUS+ project)
       </li>
       <li>
-        <a href="http://ewallproject.eu/">eWall</a>.<!-- @@add description -->
+        <a href="http://ewallproject.eu/">eWall</a>.<!--@@add description -->
         See the <a href="http://ewallproject.eu/documents/">downloadable documents</a>.
-      </li>
-      <li>
-        <a href="http://www.cardiac-eu.org/">Cardiac</a>: this project aimed
-        <q> to create a platform that can bring together the various stakeholders in the area of accessible and assistive ICT with a view to identifying research &amp; development gaps, emerging trends, and generate a research agenda roadmap.</q>
       </li>
       <li>
         <a href="http://inclusive-learning.eu/">Inclusive Learning Project (Supporting Trainers for an Inclusive Vocational Education and Training)</a>.
@@ -141,6 +131,19 @@
       </li>
       <li>
         <a href="https://accessibility-club.org/event/accessibility-club-summit-2019">Accessibility Club Summit 2019 (November 16th-17th, 2019)</a>.
+      </li>
+      <li><del datetime="2020-02-26">The website of the European project
+        European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
+        also has a <a href="http://www.eiii.eu/resources/">resources page</a>.
+        However, more importantly, the
+        <strong>search form</strong> helps you find accessibility-related
+        resources on the Web.</del>
+        <!--Searches mostly W3C and the eAccessPlus wiki, which seems to be down.-->
+      </li>
+      <li>
+        <del datetime="2021-01-26"><a href="http://www.cardiac-eu.org/">Cardiac</a>: this project aimed
+        <q>to create a platform that can bring together the various stakeholders in the area of accessible and assistive ICT with a view to identifying research &amp; development gaps, emerging trends, and generate a research agenda roadmap.</q></del>
+        (The website could not be reached on 26 January 2021.)
       </li>
     </ul>
     <p>Other <a href="miscellaneous-links.html">unsorted links</a>.</p>
