Add more examples of videos with audio description

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -714,6 +714,28 @@
         is 14 minutes long, <abbr>i.e.</abbr> six minutes shorter. This is because the version with audio description
         begins with a six-minute narration that provides the story's background and presents the two main characters.
       </li>
+      <li><span lang="de">
+        <a href="https://www.youtube.com/watch?v=A5OG0U4vsaA">Was ist eigentlich ein Hackathon? (Audiodeskription)</a>
+        (<i class="ytchannel">Aktion Mensch</i></span> on YouTube, 39 seconds, 30.12.2016).
+      </li>
+      <li><span lang="de">
+        <a href="https://www.youtube.com/watch?v=BIeoyFdXHws">I challenge you: Die Gaming-Challenge (Audiodeskription)</a>
+        (<i class="ytchannel">Aktion Mensch</i></span> on YouTube, 13 minutes, 21.08.2017).
+      </li>
+      <li><span lang="de">
+        <a href="https://www.youtube.com/watch?v=EAy7g94R5u8">Haifischwelt im Thüringer Wald (mit Audiodeskription) | Der Osten - Entdecke wo du lebst</a>
+        (<i class="ytchannel"><abbr>MDR</abbr> Mitteldeutscher Rundfunk</i></span> on YouTube, 44 minutes, 23.04.2020).
+      </li>
+      <li><span lang="de">
+        <a href="https://www.youtube.com/watch?v=1bDRP-7nAVs"><abbr>HR</abbr>-Tatort "Wer bin ich?": Audiodeskription</a>
+        (<i class="ytchannel">diana gaul, sprecherin</i></span> on YouTube, 4 minutes, 26.01.2016).
+        <br />This example displays a static image instead of a video.
+      </li>
+      <li><span lang="de">
+        <a href="https://www.youtube.com/watch?v=9DNgR3IUzrA"><abbr>BR</abbr>-Tatort Macht und Ohnmacht: Audiodeskription</a>
+        (<i class="ytchannel">diana gaul, sprecherin</i></span> on YouTube, 3 minutes, 28.08.2013).
+        <br />This example displays a static image instead of a video.
+      </li>
       <!--Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8
       -->
     </ul>
