Add: Chevallier: Poussé par une pétition, le Sénat envisage de revoir l'attribution de l'allocation Adulte Handicapé

--- a/social-legal.html
+++ b/social-legal.html
@@ -254,6 +254,11 @@
         <a href="https://www.bundesfachstelle-barrierefreiheit.de/SharedDocs/Kurzmeldungen/DE/barrierefreie-medien-mainzer-erklaerung.html" hreflang="de">Behindertenbeauftragte fordern barrierefreie Medien / „Mainzer Erklärung“ verabschiedet</a>,
         <i class="website">Bundesfachstelle Barrierefreiheit</i></span>, 10.12.2020.
       </li>
+      <li><span lang="fr">Chevallier, Hélène:
+        <a href="https://www.franceinter.fr/sous-la-pression-d-une-petition-le-senat-envisage-de-revoir-l-attribution-de-l-allocation-adulte-handicape" hreflang="fr">Poussé par une pétition, le Sénat envisage de revoir l'attribution de l'allocation Adulte Handicapé</a>,
+        <i class="website">France Inter</i>,</span> 26.01.2021.
+        <!--Referrer: https://twitter.com/apfhandicap/status/1354014348038070272 -->
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
