Add: Harley: Ensure High Contrast for Text Over Images

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1102,6 +1102,10 @@
           <a href="https://tollwerk.de/projekte/tipps-techniken-inklusiv-barrierefrei/barrierefreie-kontraste" hreflang="de">Barrierefreie Kontraste</a>,
           <i class="website">Tollwerk</i></span>, 17.11.2020.
         </li>
+        <li>Harley, Aurora:
+          <a href="https://www.nngroup.com/articles/text-over-images/">Ensure High Contrast for Text Over Images</a>,
+          <i class="website">Nielsen Norman Group</i>, 18.10.2015.
+        </li>
       </ul>
     </section>
 
