Add: Lyonnais: Accessibility Design 101: Color Contrast Considerations ...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1106,6 +1106,10 @@
           <a href="https://www.nngroup.com/articles/text-over-images/">Ensure High Contrast for Text Over Images</a>,
           <i class="website">Nielsen Norman Group</i>, 18.10.2015.
         </li>
+        <li>Lyonnais, Sheena:
+          <a href="https://xd.adobe.com/ideas/principles/web-design/color-contrast-considerations-accessibility-design/">Accessibility Design 101: Color Contrast Considerations for <abbr>UX</abbr> Designers</a>,
+          <i class="website">Adobe Xd Ideas</i>, 22.04.2020.
+        </li>
       </ul>
     </section>
 
