Add link to Accessibility Body of Knowledge and Certificates

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
       <li><a href="crowdsourcing.html">Accessibility, Crowdsourcing and Human-Based Computation</a></li>
       <li>
         <a href="assistivetechnology.html">Assistive Technology</a>,
-        especially toolkits and platforms for developing 
-        <abbr class="assistive technology">AT</abbr>
+        especially toolkits and platforms for developing <abbr class="assistive technology">AT</abbr>
       </li>
       <li><a href="contentaccessibility.html">Content Accessibility</a></li>
       <li><a href="tts.html">Text-to-speech software</a></li>
