--- a/index.xhtml
+++ b/index.xhtml
@@ -81,12 +81,12 @@
       <li><a href="crowdsourcing.html">Accessibility, Crowdsourcing and Human-Based Computation</a></li>
       <li>
         <a href="assistivetechnology.html">Assistive Technology</a>,
-        especially toolkits and platforms for developing 
-        <abbr class="assistive technology">AT</abbr>
+        especially toolkits and platforms for developing <abbr class="assistive technology">AT</abbr>
       </li>
       <li><a href="contentaccessibility.html">Content Accessibility</a></li>
       <li><a href="tts.html">Text-to-speech software</a></li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="body-of-knowledge-certificates.html">Accessibility Body of Knowledge and Certificates</a></li>
       <li><a href="terminology.html">Terminology</a></li>
       <li><a href="social-legal.html">Social and Legal Aspects</a></li>
     </ul>
