--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -196,6 +196,11 @@
       <li>Sethfors, Hampus:
         <a href="https://axesslab.com/hand-tremors/">Hand tremors and the giant-button-problem</a>,
         <i class="website">Axess Lab</i>, 09.04.2018.
+      </li>
+      <li><span lang="nl">
+        <a href="https://toegankelijkheid.q42.nl/" hreflang="nl">Onderzoek naar de toegankelijkheid van apps: Welke accessibility-instellingen gebruiken Nederlanders nou écht op hun telefoon?</a>,
+        <i class="website">Q42</i></span> (no date, probably January 2021).
+      </li>
     </ul>
 
     <h2>Specific Mobile Platforms</h2>
