Add Bailey: Use the tabindex attribute

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2081,6 +2081,10 @@
           <a href="https://theblog.adobe.com/best-practices-for-prototyping-keyboard-accessibility/">Best Practices for Prototyping Keyboard Accessibility</a>,
           <i class="blog">Adobe Blog</i>, 24.07.2019.
         </li>
+        <li>Bailey, Eric:
+          <a href="https://www.a11yproject.com/posts/2021-01-28-how-to-use-the-tabindex-attribute/">Use the <code>tabindex</code> attribute</a>,
+          <i class="website">The <abbr>A11Y</abbr> Project</i>, 28.01.2021.
+        </li>
       </ul>
 
       <p>Keyboard focus:</p>
