Add: How Accessible were 2020's Biggest Games?

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -311,6 +311,10 @@
         <a href="https://www.gamesradar.com/how-audio-description-within-games-could-make-them-more-accessible-for-blind-and-low-vision-players/">How audio description within games could make them more accessible for blind and low vision players</a>,
         <i class="website">GamesRadar+</i>, 20.10.2020.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=RWQcuBigOj0">How Accessible Were 2020's Biggest Games?</a>
+        (<i class="ytchannel">Game Maker's Toolit</i> on YouTube, 19 minutes, 11.12.2020).
+      </li>
     </ul>
 
 
@@ -372,6 +376,40 @@
       </li>
     </ul>
 
+  <!--
+  <section>
+    <h2></h2>
+    <ul>
+      <li><span lang="de">
+        <a href="" hreflang="de"></a>,
+        <i class=""></i>,</span>
+      </li>
+      <li>
+        <a href=""></a>:
+        <q cite=""></q>
+        <br />:
+        <a href=""></a>
+        <i class=""></i>,
+      </li>
+      <li>
+        <a href=""></a>,
+        <i class=""></i>,
+      </li>
+      <li>
+        <a href=""></a>
+        (<i class="ytchannel"></i> on YouTube, minutes, ).
+      </li>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      <li><span lang="nl">
+        <a href=""></a>,
+        <i class=""></i>,</span>
+      </li>
+    </ul>
+  </section>
+  -->
   </main>
 
   <footer>
