Add: accessibility lawsuits 2020, Uni Rostock, TU Chemnitz, ...

--- a/social-legal.html
+++ b/social-legal.html
@@ -172,6 +172,10 @@
         <a href="https://www.dbsv.org/stellungnahme/TSG-RefE.html" hreflang="de"><abbr>DBSV</abbr>-Stellungnahme zum Referentenentwurf eines Gesetzes zur Stärkung der Teilhabe von Menschen mit Behinderungen (Teilhabestärkungsgesetz)</a>,
         <i class="website">Deutscher Blinden- und Sehbehindertenverband</i></span>, 14.01.2021.
       </li>
+      <li><span lang="nl">Ragas, Sophie:
+        <a href="https://medium.com/eleven-ways/een-update-over-de-european-accessibility-act-70993ab0b77" hreflang="nl">Een update over de <span lang="en">European Accessibility Act</span></a>,</span>
+        <i class="website">Eleven Ways on Medium</i>, 18.11.2020.
+      </li>
     </ul>
 
     <h4>Other Policies in Europe</h4>
@@ -259,6 +263,10 @@
         <i class="website">France Inter</i>,</span> 26.01.2021.
         <!--Referrer: https://twitter.com/apfhandicap/status/1354014348038070272 -->
       </li>
+      <li><span lang="de">
+        <a href="https://www.ag.bka.gv.at/at.gv.bka.wiki-bka/index.php/Barrierefrei:EN_301_549" hreflang="de">Barrierefrei:EN 301 549</a>,
+        <i class="wiki">Verwaltungswiki / <abbr title="Bundeskanzleramt">BKA</abbr>-Wiki</i></span>.
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
@@ -344,6 +352,21 @@
         <i class="website">Forbes</i>, 22.11.2020.
         <!--https://twitter.com/A11yNews/status/1330873900989878274-->
       </li>
+      <li>
+        <a href="https://www.accessibility.com/complete-report-2020-website-accessibility-lawsuits">Complete Report: 2020 Website Accessibility Lawsuits</a>,
+        <i class="website">Accessibility.com</i>, January 2020.
+      </li>
+      <li>
+        <a href="https://www.boia.org/blog/did-u-s-businesses-spend-billions-on-legal-fees-for-inaccessible-websites-in-2020"><abbr>U.S.</abbr> Businesses Potentially Spent Billions on Legal Fees for Inaccessible Websites in 2020</a>,
+        <i class="blog">Bureau of Internet Accessibility</i>, 07.01.2021.
+        <br />Quote: <q>In a bombshell <a href="https://www.accessibility.com/complete-report-2020-website-accessibility-lawsuits">report published by Accessibility.com</a>,
+        the organization estimated that 265,000 website accessibility demand letters were sent to businesses last year. Astounding on its own, if the figure is correct or close to correct, U.S. companies could have spent billions of dollars in legal costs as a direct result of inaccessible websites in 2020 alone.</q>
+        <!--Referrer: https://twitter.com/CommonLook/status/1356624415447003137 -->
+      </li>
+      <li>
+        <a href="https://info.usablenet.com/thank-you-2020-end-of-year-report-on-digital-accessibility-lawsuits">2020 End of year Report on Digital Accessibility Lawsuits</a>,
+        <i class="website">UsableNet</i>.
+      </li>
     </ul>
 
     <p>Voluntary Product Accessibility Template (<abbr>VPAT</abbr>):</p>
@@ -406,6 +429,15 @@
       <li>
         <a href="https://www.tilburguniversity.edu/students/studying/study-progress/circumstances/disabled">Studying with a disability</a>,
         <i class="website">Tilburg University</i> (no date).
+      </li>
+      <li><span lang="de">
+        <a href="https://www.uni-rostock.de/universitaet/vielfalt-und-gleichstellung/inklusive-universitaet/barrierefreiheit/" hreflang="de">Was heißt barrierefrei?</a>,
+        <i class="website">Universität Rostock</i></span>. This includes
+        <a href="https://www.uni-rostock.de/universitaet/vielfalt-und-gleichstellung/inklusive-universitaet/barrierefreiheit/lehre-und-didaktik/" hreflang="de" lang="de">Hinweise zur barrierefreien Gestaltung von Lehrveranstaltungen und -materialien</a>.
+      </li>
+      <li><span lang="de">
+        <a href="https://www.tu-chemnitz.de/tu/inklusion/lehre.html" hreflang="de">Barrierefreie Hochschuldidaktik und inklusive Lehre</a>,
+        <i class="website">Inklusive Hochschule | <abbr>TU</abbr> Chemnitz</i></span>.
       </li>
       <!--Studying with a disability
         * https://best-umfrage.de/
@@ -492,9 +524,6 @@
         <li>
           <i class="booktitle"></i>.
           <a href=""><abbr>ISBN</abbr> </a>.
-        </li>
-        <li>
-          <a href=""></a>
         </li>
       </ul>
     </section>
