--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
   <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="http://cstrobbe.github.io/AccessibilityResources/css/meiert-qa.css" title="QA stylesheet" />
   <!--custom 404 page, as explained at https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/ -->
-  <link rel="index" href="/index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
+  <link rel="index" href="/index.html" /><!--index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
   <base id="base-url" href="http://cstrobbe.github.io/AccessibilityResources/" />
@@ -83,6 +83,8 @@ permalink: /404.html
         </li>
         <li>Other topics:
           <ul>
+            <li><a href="body-of-knowledge-certificates.html">Accessibility Body of Knowledge and Certificates</a></li>
+            <li><a href="terminology.html">Terminology</a></li>
             <li><a href="social-legal.html">Social and Legal Aspects</a></li>
             <!--@@TODO add "other topics"-->
           </ul>
