Add: Kleege and Wallin: Audio Description as a Pedagogical Tool

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -646,6 +646,11 @@
         <a href="https://www.loc.gov/nls/about/services/reference-publications/guides/audio-description-resource-guide/">Audio Description Resource Guide</a>,
         <i class="website">National Library Service for the Blind and Print Disabled (Library of Congress)</i>, 2018.
       </li>
+      <li>Kleege, Georgina; Wallin, Scott:
+        <a href="https://dsq-sds.org/article/view/4622/3945">Audio Description as a Pedagogical Tool</a>,
+        <i class="journal">Disability Studies Quarterly</i>, <abbr>Vol</abbr> 35, <abbr>No</abbr> 2 (2015).
+        <br />This article is about audio description as an exercise that develops students' writing and critical thinking skills.
+      </li>
     </ul>
 
     <p>YouDescribe:</p>
