Add: German resources: beeinträchtigt studieren ...

--- a/social-legal.html
+++ b/social-legal.html
@@ -439,6 +439,24 @@
         <a href="https://www.tu-chemnitz.de/tu/inklusion/lehre.html" hreflang="de">Barrierefreie Hochschuldidaktik und inklusive Lehre</a>,
         <i class="website">Inklusive Hochschule | <abbr>TU</abbr> Chemnitz</i></span>.
       </li>
+      <li><span lang="de">
+        <a href="" hreflang="de"></a>,
+        <i class=""></i>,</span>
+      </li>
+      <li><span lang="de">
+        <a href="https://www.studentenwerke.de/de/content/beeintr%C3%A4chtigt-studieren-%E2%80%93-best2" hreflang="de">beeinträchtigt studieren – best2: Datenerhebung zur Situation Studierender mit Behinderung und chronischer Krankheit 2016/17</a>,
+        <i class="website">Deutsches Studentenwerk</i>,</span> 2018. (324 pages)
+        <!--@@download PDF https://www.studentenwerke.de/sites/default/files/beeintraechtigt_studieren_2016_barrierefrei.pdf -->
+      </li>
+      <li><span lang="de">
+        <a href="https://www.studentenwerke.de/de/content/studieren-mit-behinderungen-zahlen-und-fakten" hreflang="de">Studieren mit Behinderungen in Zahlen und Fakten</a>,
+        <i class="website">Deutsches Studentenwerk</i></span>.
+        <!--@@download PDF -->
+      </li>
+      <li><span lang="de">
+        <a href="http://www.sozialerhebung.de/" hreflang="de">Sozialerhebung</a></span>.
+        <!--@@ http://www.sozialerhebung.de/21sozialerhebung/documents/presse -->
+      </li>
       <!--Studying with a disability
         * https://best-umfrage.de/
         * Studierende mit studienerschwerenden Beeinträchtigungen: https://best-umfrage.de/best1-zentrale-ergebnisse/
@@ -548,6 +566,10 @@
         <li>
           <a href=""></a>,
           <i class=""></i>,
+        </li>
+        <li><span lang="de">
+          <a href="" hreflang="de"></a>,
+          <i class=""></i>,</span>
         </li>
         <li>
           <a href=""></a>
