Add example of linktext that is not meaningful

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -935,6 +935,12 @@
           <i class="Markets Insider"></i>, 12.01.2021. See the live updates on futures, gold and oil at the top of the page.
         </li>
       </ul>
+      <p>Linktext that is not meaningful:</p>
+      <ul>
+        <li><a href="https://www.halleonardbooks.com/">Hal Leonard</a>:
+          <q>If you're looking for Backbeat Books, Amadeus Press, Applause Theatre &amp; Cinema Books, or Limelight Editions, <a href="https://rowman.com/" target="_blank">click here</a>.</q>
+        </li>
+      </ul>
     </section>
   <!--Example pages:
     * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html
