Add BDA's definition of dyslexia

--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -75,6 +75,12 @@
           <a href="http://www.beingdyslexic.co.uk/pages/information/general-information/dyslexia-basics/what-is-dyslexia.php">What is Dyslexia?</a>
           This page lists several definitions of dyslexia.
         </li>
+        <li>The British Dyslexia Association says it has adopted the Rose (2009) definition of dyslexia:
+          <q>Dyslexia is a learning difficulty that primarily affects the skills involved in accurate and fluent word reading and spelling.
+          Characteristic features of dyslexia are difficulties in phonological awareness, verbal memory and verbal processing speed.
+          Dyslexia occurs across the range of intellectual abilities. It is best thought of as a continuum, not a distinct category, and there are no clear cut-off points. (&hellip;)
+          </q>
+        </li>
         <li>Davis Dyslexia Association International (<abbr>USA</abbr>):
           <a href="https://www.dyslexia.com/about-dyslexia/understanding-dyslexia/">Understanding Dyslexia</a>.
         </li>
