Add: a11y-collective.com/

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2213,6 +2213,10 @@
     <section>
       <h2>Unsorted Web Accessibility Links</h2>
       <ul>
+        <li>
+          <a href="https://a11y-collective.com/">The A11Y Collective online courses on Web Accessibility</a>.
+          See also <a href="https://twitter.com/A11Ycollective">The A11Y Collective on Twitter</a>.
+        </li>
         <li><i class="website">A List Apart</i>:
           <a href="http://alistapart.com/topic/accessibility">Articles on accessibility</a>.
         </li>
