Add: How to Create Accessible Presentations with Google Slides

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -163,6 +163,10 @@
         <a href="https://www.techno-vision.co.uk/home-page/the-10-tvs-guidelines-for-making-your-documents-braille-ready/">The 10 <abbr title="Techno-Vision Systems">TVS</abbr> Guidelines For Making Your Documents Braille-Ready</a>,
         <i class="website">Techno-Vision Systems <abbr>Ltd.</abbr></i> (no date).
       </li>
+      <li>
+        <a href="https://uit.stanford.edu/accessibility/applications/google-slides">How to Create Accessible Presentations with Google Slides</a>,
+        <i class="website">Stanford Office of Digital Accessibility, Stanford University</i> (no date, accessed 16.02.2021).
+      </li>
     </ul>
     <!--AccessODF: Mapping AccessODF Checks to Web Content Accessibility Guidelines (WCAG) 2.0: http://accessodf.sourceforge.net/MappingToWCAG.html -->
 
