Add: The WebAIM Million (March 2020)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2223,6 +2223,13 @@
       <h2>Unsorted Web Accessibility Links</h2>
       <ul>
         <li>
+          <a href="https://webaim.org/projects/million/">The WebAIM Million: An annual accessibility analysis of the top 1,000,000 home pages</a>,
+          <i class="website">Web<abbr>AIM</abbr></i>, last updated on 30.03.2020.
+          <br />One of the noteworthy findings is the following:
+          <q><strong>Home pages with <abbr>ARIA</abbr> present averaged 60% more errors than those without!</strong>
+          One would expect to encounter an additional 26.2 potential barriers on home pages with <abbr>ARIA</abbr>. Interestingly, this same disparity did not exist on interior pages, where <abbr>ARIA</abbr> did not correlate to errors, even though interior pages had 71% more ARIA markup than home pages.</q>
+        </li>
+        <li>
           <a href="https://a11y-collective.com/">The A11Y Collective online courses on Web Accessibility</a>.
           See also <a href="https://twitter.com/A11Ycollective">The A11Y Collective on Twitter</a>.
         </li>
