--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 permalink: /404.html
 ---
 <?xml version="1.0" encoding="utf-8"?><!DOCTYPE html>
-<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!--Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -95,19 +95,14 @@ permalink: /404.html
   </main>
 
   <footer>
-    <p id="licence"><a rel="license"
-    href="http://creativecommons.org/licenses/by-sa/4.0/"><img
-    alt="Creative Commons License Attribution-ShareAlike" style="border-width:0"
-    src="img/cc-licence-by-sa-88x31.png" /> </a> <br />
-    <span xmlns:dct="http://purl.org/dc/terms/"
-    href="http://purl.org/dc/dcmitype/Text"><a
-    href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility
-    Resources</a></span> by <a xmlns:cc="http://creativecommons.org/ns#"
-    href="https://github.com/cstrobbe"
-    rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a <a
-    xml:lang="en-US" lang="en-US" rel="license"
-    href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
-    Attribution-ShareAlike 4.0 International License</a>.</p>
+    <p id="licence">
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="img/cc-licence-by-sa-88x31.png" /></a>
+      <br />
+      <span>Accessibility Resources</a></span> by
+      <a href="https://github.com/cstrobbe">Christophe Strobbe</a>
+      is licensed under a
+      <a lang="en-US" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    </p>
   </footer>
 </body>
 </html>
