Add warning that the tutorial is partially outdated

--- a/gpii/gpii-for-developers.html
+++ b/gpii/gpii-for-developers.html
@@ -25,6 +25,8 @@
     lang="en-US"><abbr title="Creative Commons">CC</abbr> BY-<abbr title="NonCommercial">NC</abbr>-<abbr title="ShareAlike">SA</abbr> 4.0</a>).
     </p>
 
+    <p><strong>Warning</strong>: this tutorial was written in 2016 and is now partially outdated.</p>
+
     <h2 id="intro">Introduction</h2>
 
     <p>Software programs, mobile apps and websites have a default user interface
