--- a/gpii/integrating-sublimetext.html
+++ b/gpii/integrating-sublimetext.html
@@ -25,6 +25,8 @@
     lang="en-US"><abbr title="Creative Commons">CC</abbr> BY-<abbr title="NonCommercial">NC</abbr>-<abbr title="ShareAlike">SA</abbr> 4.0</a>).
     </p>
 
+    <p><strong>Warning</strong>: this tutorial was written in 2016 and is now partially outdated.</p>
+
     <h2 id="intro">Introduction</h2>
     <p>This document describes how you can integrate a dekstop application with <abbr>GPII</abbr>'s
       real-time framework. The programming editor
