Update Office versions covered in TU Dresden's how-tos

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -92,7 +92,8 @@
         <a href="https://tu-dresden.de/tu-dresden/universitaetskultur/diversitaet-inklusion/agsbs/uebertragungsservice-1/barrierefreie-dokumente">Creating accessible documents</a>,
         <i class="website" lang="de"><abbr>AG</abbr> Services Disability and Studies (<abbr>AGSBS</abbr>), Technische Universität Dresden</i>, last updated on 14.08.2020.
         <br />See especially the section &ldquo;Instructions for barrier-free design of documents via Microsoft Word and PowerPoint&rdquo;,
-        where you can download <abbr>PDF</abbr> files with instructions for Microsoft Word 2007, Microsoft PowerPoint 2007, Microsoft Word 2013 and Microsoft PowerPoint 2013.
+        where you can download <abbr>PDF</abbr> files with instructions for Microsoft Word 2016, Microsoft PowerPoint 2016, Microsoft Word 2019 and Microsoft PowerPoint 2019.
+        <!--see downloads page in German: https://tu-dresden.de/tu-dresden/universitaetskultur/diversitaet-inklusion/agsbs/dokumente -->
       </li>
       <li>
         <a href="https://webaim.org/techniques/ooo/">OpenOffice.org Writer</a>,
